--- a/templates/form.html
+++ b/templates/form.html
@@ -67,13 +67,6 @@
             </label>
             <input type="number" id="n" class="form-control" value="20" min="1" max="200" required>
           </div>
-
-          <div class="form-group">
-            <label for="workers">
-              <i class="fas fa-cogs"></i> Workers
-            </label>
-            <input type="number" id="workers" class="form-control" value="6" min="1" max="20" required>
-          </div>
         </div>
 
         <div class="flex gap-4 justify-center">
@@ -277,6 +270,7 @@
       resetUI();
       const address = document.getElementById("address").value;
       const n = parseInt(document.getElementById("n").value);
+      const workers = 2; // Default workers set to 2
 
       try {
         // Start progress animation
